--- a/packages.tex
+++ b/packages.tex
@@ -1,8 +1,8 @@
 \usepackage{a4wide}
-\usepackage{parskip}
-\usepackage{float}
-\usepackage{graphicx}
-\usepackage{fancyhdr}
+\usepackage{parskip} % No indent on new paragraph
+\usepackage{float} % Float figures [H]ere
+\usepackage{graphicx} % Graphics support
+\usepackage{fancyhdr} % Fancy header
 \usepackage{enumitem}
-\usepackage{titling}
-\usepackage{amsmath}
+\usepackage{titling} % Better titlepage
+\usepackage{amsmath} % Better math
