--- a/latex-template.tex
+++ b/latex-template.tex
@@ -26,7 +26,10 @@
 \cfoot{}
 \rfoot{}
 
-\includeonly{sections/section-one.tex, sections/section-two.tex}
+\includeonly{
+    sections/section-one.tex,
+    sections/section-two.tex
+}
 
 % Document
 \begin{document}
@@ -47,7 +50,7 @@
         \vfill
         \vspace{0.8cm}
 
-        \includegraphics[width=0.3\textwidth]{uib-logo.png}
+        % \includegraphics[width=0.3\textwidth]{uib-logo.png}
 
         Department of Informatics\\
         University of Bergen\\
